The inotify implementation in 2.6.31/32 changed: it's possible after rm+add to get the same value of "wd" again. Which makes this processing of IN_IGNORED problematic, since it makes us forget about the 'new' watch. With many thanks to Eric Paris (who works on inotify in the kernel) for his hints about this.

About the fix: it seems safe to me to just ignore IN_IGNORED ;-), but I might adjust
this if Eric Paris advises otherwise next week.

Fixed for: 4.4 rc1
BUG: 207361

svn path=/trunk/KDE/kdelibs/; revision=1065898